--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/*:root {*/
+/*  --background: #ffffff;*/
+/*  --foreground: #171717;*/
+/*}*/
+
+/*@media (prefers-color-scheme: dark) {*/
+/*  :root {*/
+/*    --background: #0a0a0a;*/
+/*    --foreground: #ededed;*/
+/*  }*/
+/*}*/
+
+/*body {*/
+/*  color: var(--foreground);*/
+/*  background: var(--background);*/
+/*  font-family: Arial, Helvetica, sans-serif;*/
+/*}*/
+
+
+.quantity_input {
+    border-radius: 6px;
+    width: 65px;
+    text-align: center;
+    border: 1px solid gray;
+    margin: 10px;
+    padding: 2px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.count {
+    padding: 3px 15px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.product-cost {
+    float: left;
+}
+
+.main-cost {
+    float: right;
+    margin: 10px 15px;
+}
+
+.quantity {
+    float: left;
+}
+
+.unit {
+    font-size: 15px;
+    color: #000000;
+
 }
